# univ-projs

./: .gitignore  README.md
1 course/: Converter2.pas  Defines2.pas  Interpreter.dproj.local  Interpreter.identcache  Lexer.pas  Stack2.pas  Tester.pas
1 year/Interpreter/: Converter.pas  Converter2.pas  Defines.pas  Defines2.pas  Interpreter.dpr  Interpreter.dproj  Interpreter.dproj.local  Interpreter.identcache  Interpreter.pas  InterpreterCourseProject.groupproj  InterpreterCourseProject.groupproj.local  InterpreterLogic.dpr  InterpreterLogic.dproj  InterpreterLogic.dproj.local  InterpreterLogic.identcache  InterpreterUI.dpr  InterpreterUI.dproj  InterpreterUI.dproj.local  InterpreterUI.identcache  InterpreterUI.res  Lexer.pas  Main.dfm  Main.pas  Stack.pas  Stack2.pas  Tester.pas  Tests.pas  Typer.dfm  Typer.pas  UI.identcache  UI.res  Visualizer.dfm  Visualizer.pas  Курсовой.docx
1 year/Lists/: DB.pas  Defines.pas  ECorrector.dfm  ECorrector.pas  ECreator.dfm  ECreator.pas  EDeleter.dfm  EDeleter.pas  ESearcher.dfm  ESearcher.pas  ESorter.dfm  List.pas  (+12 more)
4 year/ЦОС/Lab1/: CMakeLists.txt  common.h  lab1-gen-pulse.c  lab1-gen-waves.c  lab1-merge.c  lab1-mod.c  wav.c  wav.h  waves.h
4 year/ЦОС/Lab2/: CMakeLists.txt  common.h  dft.c  dft.h  fft.c  fft.h  filter.c  filter.h  gen.c  gen.h  lab2_dec.c  lab2_filter.c  lab2_restore.c  parser.c  parser.h  plotter.py  wav.c  wav.h
Interpreter (1 year)/: Converter2.pas  Defines2.pas  Interpreter.dpr  Interpreter.dproj  Interpreter.dproj.local  Interpreter.identcache  Lexer.pas  Stack2.pas  Tester.pas  Tests.pas  readme.md
(+1151 files in other folders)
